--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <footer>
       <div class="wrapper-section wrapper-section_mod">
         <div class="container"><a class="btn-top" href="#top"><i class="fas fa-arrow-up"></i></a>
-          <p>© MINI 2014, All Right Reserves  |  Designed By bigpsfan & Metrothemes</p>
+          <p class="copyright">© MINI 2014, All Right Reserves  |  Designed By bigpsfan & Metrothemes</p>
         </div>
       </div>
     </footer>
